<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlue"
    tools:context="com.mzdev.maxime.locationhunt.menuMainActivity">

    <Button
        android:id="@+id/bPlay"
        android:layout_width="167dp"
        android:layout_height="81dp"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="108dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/Play"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:onClick="startPlay"
        app:layout_constraintBottom_toTopOf="@+id/bAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="7dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/Settings"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:onClick="goSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bAccount" />

    <Button
        android:id="@+id/bAccount"
        android:layout_width="228dp"
        android:layout_height="78dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="78dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/Account"
        android:onClick="goMyAccountIntent"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bPlay" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="134dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="39dp"
        app:layout_constraintBottom_toTopOf="@+id/bPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/location_logo_hunter" />
</android.support.constraint.ConstraintLayout>
